pauprod1/base/sso-oauth-authority/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: sso-oauth-authority-auth.sharecare.com.au
spec: {}
status:
  loadBalancer: {}
